# MQTTClientServer

DataProcessor/: CMakeLists.txt  DataProcessor.pro  conqueue.cpp  conqueue.h  dataanalizer.cpp  dataanalizer.h  location.cpp  location.h  main.cpp  parser.cpp  parser.h  pch.h  primitives.h  sessionmanager.cpp  sessionmanager.h
RandomGenerator/: CMakeLists.txt  TestMQTTClient.pro  locationinfo.cpp  locationinfo.h  main.cpp  mqttservice.cpp  mqttservice.h  pch.h  primitives.h  sessioninfo.h  trajectory.cpp  trajectory.h
